org.mmisw.ontmd: MMI ORR Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2010-06-16   1.9.3.alpha
	Fixed issue #257:"version selection window remains open"
	- OntologyTable: add listener also to the uri element.

2010-06-15   1.9.2.alpha   (note: syncing version with iserver and Ont modules)
	Fixed issue #252: "omv:version gone?"
	Relevant changes only in the Ont and iserver modules.

2010-06-15   1.9.1.alpha
	- Fixed issue #245:"cannot find authority abbreviation after typing a few letters"
	  FieldWithChoose: just set limit of the suggest box to the number of options.
	  
2010-06-14   1.9.0.alpha
	Issue #242: "admin interface to remove an ontology" implemented:
	- Changes in Ont and iserver modules completed.
	- Changes in this ontmd module completed.
	Note: the deletion option is only available for the ORR admin user.

2010-04-xx   1.9.0.alpha
	Continuing implementation of admin operations
	- unregister ontology
	
2009-12-29   1.8.1.alpha
	- build.xml: generate orr.war (instead of old ontmd.war)
	- Util.isOrrAdmin: Tells if the logged in user is the ORR admin.
	- Used by HeaderPanel to include the Admin interface link.
	
2009-12-28   1.8.1.alpha
	- AdminPanel moved to new package org.mmisw.ontmd.gwt.client.portal.admin 
	- preliminary Server.createGroupsOntology (management of internal resources still under revision)

2009-12-24   1.8.0.alpha
	New Admin interface intended to provide various admin operations.
	Initially with creation of the "internal" users instantiation ontology.
	See modules iserver and ont.
	 

2009-12-23   1.8.0.alpha
	Preparing for handling "internal" ontologies. An internal ontology provides supporting information
	for the MMI ORR. 
	
	An internal ontology is visible only to administrators and its owner.
	- Util.isInternalOntology: determines if an ontology is "internal" according to the authority component,
	  currently, "mmiorr-internal". In general, internal ontologies are to be fully hosted.
	  